fixed image height and padding on small screens

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -3380,8 +3380,8 @@ body  {
     display: block;
     position: relative;
     width: 100%;
-    height: 72px;
-    padding-left: @cardPadding;
+    height: 192px;
+    padding: @cardPadding;
     padding-bottom: @cardPadding * .66;
   }
   .imageContainerBig {
